quick fix for overflow

--- a/style/style.less
+++ b/style/style.less
@@ -6,6 +6,8 @@
 * {box-sizing: border-box;}
 
 body {
+    .absolute(0,0,0,0);
+    overflow: hidden;
     font-family: sans-serif;
     font-size: 12px;
 }
